dataset/0100cBt1100110bWm2-FilteredHierarchy/.store/metadata/objects/LLC_BI__Product_State_Config__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Activate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if Product State Config is used to determine if a record is active (checked) or inactive (unchecked).  Used in connection with a feature specific (e.g. Covenant) setting is active.  Default is unchecked (inactive).</description>
        <inlineHelpText>This field indicates if Product State Config is used to determine if a record is active (checked) or inactive (unchecked).  Used in connection with a feature specific (e.g. Covenant) setting is active.  Default is unchecked (inactive).</inlineHelpText>
        <label>Activate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Stage_Order__c</fullName>
        <description>This field is currently not used.</description>
        <label>External Stage Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Stage__c</fullName>
        <description>This field is currently not used.</description>
        <label>External Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Conditional Approval</fullName>
                </value>
                <value>
                    <fullName>Processing/Verification</fullName>
                </value>
                <value>
                    <fullName>Settlement</fullName>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Booked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and is manually populated. A loan is booked after the customer has been funded. When true, it denotes whether the stage and status referenced on this record represents the &quot;Booked&quot; stage for a loan. This field is used to determine whether the &quot;LLC_BI__Is_Booked__c&quot; field on loan is automatically checked.</description>
        <label>Is Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and is manually populated. A loan is closed after approval but prior to being booked. When true, it denotes whether the stage and status referenced on this record represents the &quot;Closed&quot; stage for a loan. This field is used to determine whether the &quot;LLC_BI__Is_Closed__c&quot; field on loan is automatically checked.</description>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Covenant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if a Covenant related Product State Config (checked). Default is unchecked.</description>
        <inlineHelpText>This field indicates if a Covenant related Product State Config (checked). Default is unchecked.</inlineHelpText>
        <label>Is Covenant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Excluded_From_Stage_Duration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and is manually populated. It is used with opportunity history. When true, a loan in the stage and status denoted on the record with the product type this record is associated to will not be used in opportunity history calculations.</description>
        <label>Is Excluded From Stage Duration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Ready_To_Transmit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually populated. It is used for CUSO implementations. When true, it denotes whether the stage and status referenced on this record represents a stage and status for the loan where its data should be transmitted to the CUSO data storage.</description>
        <label>Is Ready to Transmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type__c</fullName>
        <description>This field is automatically populated if creating the record from the product type. It is used to set which product type this product stage config should be used for.</description>
        <label>Product Type</label>
        <referenceTo>LLC_BI__Product_Type__c</referenceTo>
        <relationshipLabel>Product State Config</relationshipLabel>
        <relationshipName>Product_Type_Config</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage__c</fullName>
        <description>This field is required. This field is manually populated. This field specifies the value that should be compared to the LLC_BI__Stage__c field on the LLC_BI__Loan__c object.</description>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage_and_Status__c</fullName>
        <description>This field is automatically populated via a formula using the &quot;Stage&quot; and &quot;Status&quot; fields. It is compared to the LLC_BI__Stage_And_Status__c field on LLC_BI__Loan__c records that have a matching product type to determine whether this record matches the current state of the loan. When it does match, depending on what fields are populated on the product state config record, the loan may be updated in the system or customer portal and/or reports may be updated.</description>
        <formula>LLC_BI__Stage__c &amp; &quot;|&quot; &amp; LLC_BI__Status__c</formula>
        <label>Stage and Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is required. This field is manually populated. This field specifies the value that should be compared to the LLC_BI__Status__c field on the LLC_BI__Loan__c object.</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Line_Name__c</fullName>
        <formula>LLC_BI__Product_Type__r.LLC_BI__Product_Line__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line Name</label>
        <type>Text</type>
    </fields>
    <label>Product State Config</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Product_Type__c</columns>
        <columns>Product_Line_Name__c</columns>
        <columns>LLC_BI__External_Stage__c</columns>
        <columns>LLC_BI__External_Stage_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000000000}</displayFormat>
        <label>Product State Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product State Config</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>